kubedefs/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skillhub-backend
  labels:
    app: skillhub-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: skillhub-backend
  template:
    metadata:
      labels:
        app: skillhub-backend
    spec:
      containers:
      - name: skillhub-backend
        image: talhahussainx673/skillhub-backend:latest
        ports:
        - containerPort: 7000
