kubedefs/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skillhub-frontend
  labels:
    app: skillhub-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: skillhub-frontend
  template:
    metadata:
      labels:
        app: skillhub-frontend
    spec:
      containers:
      - name: skillhub-frontend
        image: talhahussainx673/skillhub-frontend:latest
        ports:
        - containerPort: 3000
