kubedefs/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skillhub-backend-service
spec:
  selector:
    app: skillhub-backend
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
