kubedefs/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skillhub-frontend-service
spec:
  selector:
    app: skillhub-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
