kubedefs/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillhub-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production" 
spec:
  rules:
  - host: skillhub.syedtalhahussain.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skillhub-frontend-service
            port:
              number: 3000
